app/assets/stylesheets/main.css
* {
  font-family: 'Alef', sans-serif;
}

.jumbotron {
  background-image: url(https://images.unsplash.com/photo-1416339426675-1f96fd81b653?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=4fb0b2c934659936c6dbf789225ee220);
  background-size: cover;
}

.photo-title {
  margin-top: 30px;
}

a.photo-title {
  min-height: 30px;
  color: #0b0b0b;
}

h3.photo-title {
  min-height: 30px;
  color: #0b0b0b;
}

h1 {
  color: #CC1010 !important;
  /*Shouldnt use important, but not working otherwise*/
}

.studio-column {
  padding-top: 35px;
}

html, body {
  overflow: auto;
  height: 100%;
  padding-bottom: 50px;
}

footer {
 position: absolute;
 bottom: 0;
 width: 100%;
 height: 60px;
 background-color: #222222;
}

footer h3 {
  color: #CC1010;
}

.studio-name {
  min-height: 30px;
}

.studio-description {
  min-height: 170px;
}

.table td {
  text-align: center;
}

.table th {
  text-align: center;
}

